correctif contraste boutons

--- a/style.css
+++ b/style.css
@@ -846,7 +846,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #020107!important;
 }
 
 .btn-atomic-tangerine:hover {
